tests/macros/input/choices.stderr
error: option `choices` does not exist for kind `input`
 --> $DIR/choices.rs:2:37
  |
2 |     inquisition::questions![input { choices: todo!() }];
  |                                     ^^^^^^^
