tests/macros/input/choices.rs
fn main() {
    inquisition::questions![input { choices: todo!() }];
}
